--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -36,7 +36,7 @@
                 <a pRipple
                   class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
                   routerLinkActive="active-navlink">
-                  <i class="pi pi-user-minus mr-2" routerLinkActive="active-navlink"></i>
+                  <i class="pi pi-clock mr-2" routerLinkActive="active-navlink"></i>
                   <span class="font-medium" routerLinkActive="active-navlink">Absences</span>
                 </a>
               </li>
@@ -178,7 +178,7 @@
           <a pRipple class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer
                       transition-duration-150 transition-colors">
             <i class="pi pi-inbox text-base lg:text-2xl mr-2 lg:mr-0"></i>
-            <span class="block lg:hidden font-medium">Inbox</span>
+            <span class="block lg:hidden font-medium">Messagerie</span>
           </a>
         </li>
         <li>
@@ -201,10 +201,10 @@
       </ul>
     </div>
     <div class="flex flex-column flex-auto" style="height: calc(100vh - 60px); overflow: auto;">
-      <div class="surface-section p-5 pt-2 pb-2">
+      <!-- <div class="surface-section p-5 pt-2 pb-2">
         <h1>{{ currentPageName }}</h1>
-      </div>
-      <div class="p-5 pt-2 sur">
+      </div> -->
+      <div class="p-4">
         <router-outlet></router-outlet>
       </div>
     </div>
