--- a/src/app/admin/components/material-list/material-list.component.scss
+++ b/src/app/admin/components/material-list/material-list.component.scss
@@ -1,3 +1,10 @@
+h1 {
+  text-align: center;
+  color: #333;
+  font-size: 24px;
+  margin-top: 20px;
+}
+
 .search-bar {
   display: flex;
   justify-content: center;
@@ -19,11 +26,9 @@
 }
 
 .materials-container {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(200px, 1fr)
-  ); // Crée une grille responsive
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
   padding: 0 20px;
 
@@ -33,6 +38,8 @@
     padding: 15px;
     text-align: center;
     background-color: #f9f9f9;
+    width: 100%;
+    max-width: 300px;
 
     p {
       margin: 0;
