--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -100,11 +100,11 @@
                 <i class="pi pi-chevron-down"></i>
               </div>
               <ul class="list-none p-0 m-0 overflow-hidden">
-                <li>
-                  <a pRipple
+                <li routerLink="/admin/users" >
+                  <a pRipple routerLinkActive="active-navlink"
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
-                    <i class="pi pi-folder mr-2"></i>
-                    <span class="font-medium">Utilisateurs</span>
+                    <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
+                    <span class="font-medium" routerLinkActive="active-navlink">Utilisateurs</span>
                   </a>
                 </li>
                 <li>
