--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -1,22 +1,57 @@
-<h1>Gestion des équipements</h1>
-<div class="search-bar">
-  <input
-    type="text"
-    [(ngModel)]="searchQuery"
-    (input)="onSearch()"
-    placeholder="Rechercher un matériel..."
-  />
-</div>
+<div class="container">
+  <h1>Gestion des équipements</h1>
 
-<div class="materials-container">
-  <div
-    *ngIf="filteredMaterials && filteredMaterials.length > 0; else noMaterials"
-  >
-    <div class="material-item" *ngFor="let material of filteredMaterials">
-      <p>{{ material.equipment }}</p>
-    </div>
+  <!-- Barre de recherche PrimeNG -->
+  <div class="search-bar">
+    <span class="p-input-icon-left">
+      <i class="pi pi-search"></i>
+      <input
+        type="text"
+        pInputText
+        [(ngModel)]="searchQuery"
+        (input)="onSearch()"
+        placeholder="Rechercher un matériel..."
+      />
+    </span>
   </div>
-  <ng-template #noMaterials>
-    <p>Aucun matériel trouvé.</p>
-  </ng-template>
+
+  <!-- Tableau PrimeNG avec pagination et responsive layout -->
+  <p-table
+    [value]="filteredMaterials"
+    [paginator]="true"
+    [rows]="9"
+    [responsiveLayout]="scroll"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th>ID</th>
+        <th>Nom de l'équipement</th>
+        <th>Actions</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-material>
+      <tr>
+        <td>{{ material.id }}</td>
+        <td>{{ material.equipment }}</td>
+        <td>
+          <!-- Boutons avec icônes et tooltips -->
+          <p-button
+            icon="pi pi-pencil"
+            class="p-button-rounded p-button-success p-mr-2"
+            tooltip="Modifier"
+          ></p-button>
+          <p-button
+            icon="pi pi-trash"
+            class="p-button-rounded p-button-danger"
+            tooltip="Supprimer"
+          ></p-button>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td colspan="3">Aucun matériel trouvé.</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
