--- a/src/app/admin/components/material-list/material-list.component.scss
+++ b/src/app/admin/components/material-list/material-list.component.scss
@@ -1,56 +1,76 @@
-h1 {
+.h1-title {
+  font-size: 2em;
   text-align: center;
-  color: #333;
-  font-size: 24px;
   margin-top: 20px;
+  margin-bottom: 20px;
+  color: #333;
+  font-weight: bold;
 }
 
-.search-bar {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-
-  input {
-    width: 100%;
-    max-width: 400px; // Limite la largeur sur les grands écrans
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-
-    &:focus {
-      outline: none;
-      border-color: #007bff; // Couleur de mise en évidence lors de la focalisation
-    }
+@media (max-width: 768px) {
+  .h1-title {
+    font-size: 1.5em;
+    margin-top: 5px;
+    margin-bottom: 15px;
   }
 }
 
-.materials-container {
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  padding: 0 20px;
-
-  .material-item {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 15px;
-    text-align: center;
-    background-color: #f9f9f9;
-    width: 100%;
-    max-width: 300px;
-
-    p {
-      margin: 0;
-      font-size: 18px;
-      color: #333;
-    }
-  }
+  align-items: stretch;
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
 }
 
-@media (max-width: 600px) {
-  .materials-container {
-    grid-template-columns: 1fr; // Colonne unique pour les petits écrans
+/* Style de la barre de recherche */
+.search-bar {
+  width: 100%;
+  padding: 0 15px;
+  margin-bottom: 20px;
+}
+
+.search-bar .p-input-icon-left {
+  width: 100%;
+  position: relative;
+}
+
+.search-bar input {
+  width: 100%;
+  padding: 10px 15px 10px 35px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.search-bar .pi-search {
+  position: absolute;
+  top: 50%;
+
+  color: #777;
+}
+
+/* Style du tableau */
+.table-container {
+  width: 100%;
+}
+
+.p-datatable {
+  width: 100%;
+}
+
+/* Responsive design pour les petits écrans */
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
+
+  .search-bar {
+    padding: 0 10px;
+  }
+
+  .search-bar input {
+    padding-left: 30px;
   }
 }
