--- a/src/app/admin/components/material-list/material-list.component.html
+++ b/src/app/admin/components/material-list/material-list.component.html
@@ -43,7 +43,7 @@
           <p-button
             icon="pi pi-trash"
             class="p-button-rounded p-button-danger"
-            tooltip="Supprimer"
+            (onClick)="confirmDelete(material)"
           ></p-button>
         </td>
       </tr>
@@ -55,3 +55,6 @@
     </ng-template>
   </p-table>
 </div>
+
+<p-confirmDialog></p-confirmDialog>
+<p-toast></p-toast>
