--- a/src/app/admin/components/students/students.component.html
+++ b/src/app/admin/components/students/students.component.html
@@ -1,4 +1,3 @@
-<p>students works!</p>
 <!-- users.component.html -->
 <p-table [value]="students" [paginator]="true" [rows]="13">
     <!-- Votre en-tête de tableau -->
@@ -13,7 +12,7 @@
             <th>NIP</th>
             <th>INE</th>
             <th>Apprentie</th>
-            <th>Degree</th>
+            <th>Parcour</th>
             <th>Promotion</th>
             <th>TD</th>
             <th>TP</th>
@@ -29,11 +28,19 @@
             <td>{{ student.user.email }}</td>
             <td>{{ student.personal_info.nip }}</td>
             <td>{{ student.personal_info.ine  }}</td>
-            <td>{{ student.personal_info.apprentice  }}</td>
+            <td>
+                <span *ngIf="student.personal_info.apprentice; else notApprentice">
+                    <i class="pi pi-check" style="color: green;"></i>
+                </span>
+                <ng-template #notApprentice>
+                    <i class="pi pi-times" style="color: red;"></i>
+                </ng-template>
+            </td>
             <td>{{ student.academic_info.degree.name }}</td>
             <td>BUT{{ student.academic_info.promotion.level }}</td>
             <td>{{ student.academic_info.td.name }}</td>
             <td>{{ student.academic_info.tp.name }}</td>
+            
         </tr>
     </ng-template>
 </p-table>
