--- a/src/app/admin/components/teachers/teachers.component.html
+++ b/src/app/admin/components/teachers/teachers.component.html
@@ -1,4 +1,3 @@
-<p>students works!</p>
 <!-- users.component.html -->
 <p-table [value]="teachers" [paginator]="true" [rows]="13">
     <!-- Votre en-tête de tableau -->
@@ -24,7 +23,14 @@
             <td>{{ teacher.user.email }}</td>
             <td>{{ teacher.personal_info.initial }}</td>
             <td>{{ teacher.personal_info.desktop  }}</td>
-            <td>{{ teacher.user.isAdmin }}</td>
+            <td>
+                <span *ngIf="teacher.user.isAdmin; else notIsAdmin">
+                    <i class="pi pi-check" style="color: green;"></i>
+                </span>
+                <ng-template #notIsAdmin>
+                    <i class="pi pi-times" style="color: red;"></i>
+                </ng-template>
+            </td>
         </tr>
     </ng-template>
 </p-table>
