--- a/src/app/admin/components/users/users.component.html
+++ b/src/app/admin/components/users/users.component.html
@@ -21,7 +21,14 @@
             <td>{{ user.last_name }}</td>
             <td>{{ user.email }}</td>
             <td>{{ user.role.name }}</td>
-            <td>{{ user.isAdmin }}</td>
+            <td>
+                <span *ngIf="user.isAdmin; else notIsAdmin">
+                    <i class="pi pi-check" style="color: green;"></i>
+                </span>
+                <ng-template #notIsAdmin>
+                    <i class="pi pi-times" style="color: red;"></i>
+                </ng-template>
+            </td>
         </tr>
     </ng-template>
 </p-table>
