--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -121,7 +121,7 @@
                     <span class="font-medium">Parcours</span>
                   </a>
                 </li>
-                <li>
+                <li routerLink="/admin/classrooms">
                   <a pRipple
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
                     <i class="pi pi-folder mr-2"></i>
