--- a/src/app/admin/components/single-classroom/single-classroom.component.html
+++ b/src/app/admin/components/single-classroom/single-classroom.component.html
@@ -1,3 +1,2 @@
-
-<h1>Salle de classe: {{classroomData.name}}</h1>
-
+<h1 *ngIf="classroomData">Salle de classe: {{ classroomData.name }}</h1>
+<p *ngIf="classroomData">{{ classroomData.capacity }}</p>
