--- a/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
+++ b/src/app/admin/components/classroom-equipment-dialog/classroom-equipment-dialog.component.html
@@ -1,24 +1,13 @@
-<p-dialog header="Choisir un équipement" [(visible)]="display" [modal]="true" [responsive]="true" [style]="{ 'width': '500px' }">
-    <p-table [value]="availableEquipments">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Équipement</th>
-          <th>Quantité</th>
-          <th>Actions</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-availableEquipment>
-        <tr>
-          <td>{{ availableEquipment.equipment }}</td>
-          <td>
-            <input pInputText type="number" [(ngModel)]="selectedQuantity" placeholder="Quantité" />
-          </td>
-          <td>
-            <button pButton type="button" (click)="chooseEquipment(availableEquipment.id)" label="Choisir"></button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-    <button pButton type="button" (click)="closeDialog()" label="Fermer"></button>
-</p-dialog>
-  
+<div *ngIf="availableEquipments.length > 0">
+  <h3>Sélectionnez l'équipement à ajouter</h3>
+  <ul>
+    <li *ngFor="let equipment of availableEquipments">
+      <input type="radio" name="equipment" (click)="selectedEquipment = equipment">{{ equipment.equipment }}
+    </li>
+  </ul>
+  <div>
+    <label for="quantity">Quantité :</label>
+    <input id="quantity" type="number" [(ngModel)]="selectedQuantity" min="1">
+  </div>
+  <button (click)="chooseEquipment()">Ajouter à la salle de classe</button>
+</div>
