--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -3,8 +3,8 @@
     <div class="surface-section w-full md:w-5 p-6 md:p-7">
       <div class="mb-5">
         <img class="logo" src="assets/images/logo-iut-black.png" alt="Image" width="130" class="mb-3">
-        <div class="text-900 text-3xl font-medium mb-3 mt-3">{{ greeting }},</div>
-        <span class="text-600 font-medium mr-2">Connectez-vous pour accéder à ce service.</span>
+        <div class="text-900 text-2xl font-semibold mb-2 mt-3">{{ greeting }},</div>
+        <span class="text-600 text-sm font-medium mr-2">Connectez-vous pour accéder à ce service.</span>
       </div>
 
       <div *ngIf="loginStatusMessage" class="login-status mb-5 w-full">
@@ -13,21 +13,21 @@
 
       <div>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <label for="username" class="block text-900 font-medium mb-2">Identifiant</label>
-          <input id="username" type="text" pInputText class="w-full mb-3 p-3" formControlName="username"
+          <label for="username" class="block text-900 text-sm font-medium mb-2">Identifiant</label>
+          <input id="username" type="text" pInputText class="w-full mb-4 p-3" formControlName="username"
             [ngClass]="{'ng-invalid ng-dirty': loginStatusMessage }">
 
-          <label for="password" class="block text-900 font-medium mb-2">Mot de passe</label>
+          <label for="password" class="block text-900 text-sm font-medium mb-2">Mot de passe</label>
           <p-password id="password" [toggleMask]="true" [feedback]="false" class="w-full" formControlName="password"
             [ngClass]="{'ng-invalid ng-dirty': loginStatusMessage }"></p-password>
 
 
-          <div class="flex align-items-center justify-content-between mb-6">
+          <div class="flex align-items-center justify-content-between mb-6 mt-2">
             <div class="flex align-items-center">
               <p-checkbox id="rememberme" [binary]="true" styleClass="mr-2"></p-checkbox>
-              <label for="rememberme2">Rester connecté</label>
+              <label for="rememberme2" class="text-sm">Mémoriser cet appareil</label>
             </div>
-            <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer"
+            <a class="font-medium no-underline ml-2 text-blue-500 text-sm text-right cursor-pointer"
               routerLink="/auth/reset-password">Mot de passe oublié ?</a>
           </div>
 
