--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex relative lg:static surface-100">
+<div class="min-h-screen flex relative lg:static surface-section">
   <div id="app-sidebar"
     class="surface-section h-full lg:h-auto hidden lg:block flex-shrink-0 absolute lg:static left-0 top-0 z-1 border-right-1 surface-border select-none"
     style="width: 280px">
@@ -15,74 +15,80 @@
       <div class="overflow-y-auto mt-1 mr-1 ml-1">
         <ul class="list-none p-3 m-0">
           <li>
+            <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
+              pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
+              leaveActiveClass="slideup">
+              <span class="font-bold text-800 text-xs">L'ENT</span>
+              <i class="pi pi-chevron-down" style="font-size: 0.8rem"></i>
+            </div>
             <ul class="list-none p-0 m-0 overflow-hidden">
               <li routerLink="/dashboard">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-home mr-2" routerLinkActive="active-navlink"></i>
-                  <span class="font-medium" routerLinkActive="active-navlink">Tableau de bord</span>
+                  <span class="font-medium text-sm" routerLinkActive="active-navlink">Tableau de bord</span>
                 </a>
               </li>
               <li routerLink="/timetable">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-calendar mr-2" routerLinkActive="active-navlink"></i>
-                  <span class="font-medium" routerLinkActive="active-navlink">Emploi du temps</span>
+                  <span class="font-medium text-sm" routerLinkActive="active-navlink">Emploi du temps</span>
                 </a>
               </li>
               <li routerLink="/absences">
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                   routerLinkActive="active-navlink">
                   <i class="pi pi-clock mr-2" routerLinkActive="active-navlink"></i>
-                  <span class="font-medium" routerLinkActive="active-navlink">Absences</span>
+                  <span class="font-medium text-sm" routerLinkActive="active-navlink">Absences</span>
                 </a>
               </li>
               <li>
                 <a pRipple
-                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                  class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                   pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                   leaveActiveClass="slideup">
                   <i class="pi pi-chart-line mr-2"></i>
-                  <span class="font-medium">Statistiques</span>
-                  <i class="pi pi-chevron-down ml-auto"></i>
+                  <span class="font-medium text-sm">Statistiques</span>
+                  <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
                 </a>
                 <ul
                   class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
                   <li>
                     <a pRipple
-                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                       pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                       leaveActiveClass="slideup">
                       <i class="pi pi-chart-line mr-2"></i>
-                      <span class="font-medium">Revenue</span>
-                      <i class="pi pi-chevron-down ml-auto"></i>
+                      <span class="font-medium text-sm">Revenue</span>
+                      <i class="pi pi-chevron-down ml-auto" style="font-size: 0.8rem"></i>
                     </a>
                     <ul
                       class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out">
                       <li>
                         <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                           <i class="pi pi-table mr-2"></i>
-                          <span class="font-medium">View</span>
+                          <span class="font-medium text-sm">View</span>
                         </a>
                       </li>
                       <li>
                         <a pRipple
-                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                          class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                           <i class="pi pi-search mr-2"></i>
-                          <span class="font-medium">Search</span>
+                          <span class="font-medium text-sm">Search</span>
                         </a>
                       </li>
                     </ul>
                   </li>
                   <li>
                     <a pRipple
-                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
+                      class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors ptb-14px">
                       <i class="pi pi-chart-line mr-2"></i>
-                      <span class="font-medium">Expenses</span>
+                      <span class="font-medium text-sm">Expenses</span>
                     </a>
                   </li>
                 </ul>
@@ -96,45 +102,45 @@
               <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
                 pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
                 leaveActiveClass="slideup">
-                <span class="font-medium">ADMINISTRATION</span>
-                <i class="pi pi-chevron-down"></i>
+                <span class="font-bold text-800 text-xs">ADMINISTRATION</span>
+                <i class="pi pi-chevron-down" style="font-size: 0.8rem"></i>
               </div>
               <ul class="list-none p-0 m-0 overflow-hidden">
 
                 <li routerLink="/admin/users">
                   <a pRipple routerLinkActive="active-navlink"
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                     <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium" routerLinkActive="active-navlink">Utilisateurs</span>
+                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Utilisateurs</span>
                   </a>
                 </li>
                 <li>
                   <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                     <i class="pi pi-folder mr-2"></i>
-                    <span class="font-medium">Formations</span>
+                    <span class="font-medium text-sm">Formations</span>
                   </a>
                 </li>
                 <li>
                   <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                     <i class="pi pi-folder mr-2"></i>
-                    <span class="font-medium">Parcours</span>
+                    <span class="font-medium text-sm">Parcours</span>
                   </a>
                 </li>
                 <li>
                   <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2">
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px">
                     <i class="pi pi-folder mr-2"></i>
-                    <span class="font-medium">Salles de classe</span>
+                    <span class="font-medium text-sm">Salles de classe</span>
                   </a>
                 </li>
                 <li routerLink="/admin/materials">
                   <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
                     routerLinkActive="active-navlink">
                     <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium" routerLinkActive="active-navlink">Équipements</span>
+                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Équipements</span>
                   </a>
                 </li>
               </ul>
@@ -149,7 +155,7 @@
             <a pRipple
               class="flex align-items-center cursor-pointer p-3 hover:surface-100 border-round text-700 transition-duration-150 transition-colors">
               <i class="pi pi-cog mr-2"></i>
-              <span class="font-medium">Paramètres</span>
+              <span class="font-medium text-sm">Paramètres</span>
             </a>
           </li>
           <li>
@@ -157,7 +163,7 @@
               class="flex align-items-center cursor-pointer p-3 hover:surface-100 border-round text-700 transition-duration-150 transition-colors"
               (click)="logout()">
               <i class="pi pi-sign-out mr-2"></i>
-              <span class="font-medium">Se déconnecter</span>
+              <span class="font-medium text-sm">Se déconnecter</span>
             </a>
           </li>
         </ul>
@@ -165,8 +171,11 @@
           class="m-3 px-3 py-2 flex align-items-center hover:surface-100 border-round cursor-pointer text-700 transition-duration-150 transition-colors gap-2"
           pStyleClass="@prev" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
           leaveActiveClass="slideup">
-          <img src="assets/images/sching.gif" class="mr-2" style="width: 28px; height: 28px" />
-          <span class="font-medium">{{ first_name }} {{ last_name }}</span>
+          <img src="assets/images/sching.gif" class="mr-2" style="width: 34px; height: 34px" />
+          <div class="flex flex-column">
+            <span class="font-medium text-900 text-sm">{{ first_name }} {{ last_name }}</span>
+            <span class="font-light" style="font-size: 12px">{{ role }}</span>
+          </div>
           <i class="pi pi-chevron-up ml-auto"></i>
         </a>
       </div>
@@ -174,37 +183,52 @@
   </div>
   <div class="min-h-screen flex flex-column relative flex-auto fixed top-0">
     <div
-      class="fixed top-0 flex justify-content-between align-items-center px-5 surface-0 border-bottom-1 surface-border relative lg:static"
+      class="fixed top-0 flex justify-content-between align-items-center px-5 surface-0 surface-border relative lg:static"
       style="height: 60px">
       <div class="flex">
-        <a pRipple class="cursor-pointer block lg:hidden text-700 mr-3" pStyleClass="#app-sidebar" enterClass="hidden"
-          enterActiveClass="fadeinleft" leaveToClass="hidden" leaveActiveClass="fadeoutleft"
-          [hideOnOutsideClick]="true">
-          <i class="pi pi-bars text-4xl" style="margin-top: 6px"></i>
+        <a pRipple class="cursor-pointer block lg:hidden text-700 mr-3" style="margin-top: 11px"
+          pStyleClass="#app-sidebar" enterClass="hidden" enterActiveClass="fadeinleft" leaveToClass="hidden"
+          leaveActiveClass="fadeoutleft" [hideOnOutsideClick]="true">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="20" height="20"
+            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M4 6l16 0" />
+            <path d="M4 12l16 0" />
+            <path d="M4 18l16 0" />
+          </svg>
         </a>
         <span class="p-input-icon-left">
           <i class="pi pi-search"></i>
-          <input type="text" pInputText class="border-none w-10rem sm:w-20rem" placeholder="Rechercher" />
+          <input type="text" pInputText class="border-none w-10rem sm:w-20rem text-sm" placeholder="Rechercher" />
         </span>
       </div>
       <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
         enterActiveClass="fadein" leaveToClass="hidden" leaveActiveClass="fadeout" [hideOnOutsideClick]="true">
-        <i class="pi pi-ellipsis-v text-2xl" style="margin-top: 3px"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="20" height="20"
+          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+          <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+          <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
+        </svg>
       </a>
       <ul
-        class="list-none p-0 m-0 hidden lg:flex lg:align-items-center select-none lg:flex-row surface-section border-1 lg:border-none surface-border right-0 top-100 z-1 shadow-2 lg:shadow-none absolute lg:static">
+        class="list-none p-0 m-0 hidden lg:flex lg:align-items-center select-none lg:flex-row surface-section border-1 lg:border-none surface-border top-100 z-1 shadow-2 lg:shadow-none absolute lg:static border-round"
+        style="right: 24px">
         <li>
           <a pRipple
             class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors">
-            <i class="pi pi-inbox text-base lg:text-2xl mr-2 lg:mr-0"></i>
-            <span class="block lg:hidden font-medium">Messagerie</span>
+            <i class="pi pi-inbox text-base lg:text-xl mr-2 lg:mr-0"></i>
+            <span class="block lg:hidden font-medium text-sm">Messagerie</span>
           </a>
         </li>
         <li>
           <a pRipple
             class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors">
-            <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0" pBadge severity="danger"></i>
-            <span class="block lg:hidden font-medium">Notifications</span>
+            <i class="pi pi-bell text-base lg:text-xl mr-2 lg:mr-0" pBadge severity="danger"></i>
+            <span class="block lg:hidden font-medium text-sm">Notifications</span>
           </a>
         </li>
         <li class="border-top-1 surface-border lg:border-top-none">
@@ -212,10 +236,10 @@
             class="flex p-3 lg:px-3 lg:py-2 align-items-center hover:surface-100 font-medium border-round cursor-pointer transition-duration-150 transition-colors">
             <img src="assets/images/sching.gif" class="mr-3 lg:mr-0" style="width: 32px; height: 32px" />
             <div class="block lg:hidden">
-              <div class="text-900 font-medium">
+              <div class="text-900 font-medium text-sm">
                 {{ first_name }} {{ last_name }}
               </div>
-              <span class="text-600 font-medium text-sm">Étudiant</span>
+              <span class="text-600 font-medium text-sm">{{ role }}</span>
             </div>
           </a>
         </li>
