--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -7,3 +7,8 @@
   color: rgb(37 99 235) !important;
   background-color: rgb(239, 244, 255) !important;
 }
+
+.ptb-14px {
+  padding-top: 14px !important;
+  padding-bottom: 14px !important;
+}
